--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -131,7 +131,7 @@
   contents:
     - year: 2022
       items:
-        - "<a href=\"https://gecco-2022.sigevo.org/Best-Paper-Nominations\">Nominated for the Best Paper Award at GECCO'22</a>"
+        - "<a href=\"https://gecco-2022.sigevo.org/Best-Paper-Nominations\">Won the Best Paper Award at GECCO'22 (GECH track)</a>"
     - year: 2021
       items:
         - "<a href=\"https://icml.cc/Conferences/2021/Reviewers\">Best Reviewers Award (Top 10%) ICML'21</a>"
