--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Biedenkapp
 email: biedenka@cs.uni-freiburg.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Personla Website of André Biedenkapp
+  Personal Website of André Biedenkapp
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: Dynamic Algorithm Configuration, Reinforcement Learning, Learning to Learn  # add your own keywords or leave empty
