--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -21,3 +21,11 @@
 "Benjamins":
   - firstname: ["Carolin", "C."]
     url: https://www.tnt.uni-hannover.de/en/staff/benjamin/
+
+"Grabocka":
+  - firstname: ["Josif", "J."]
+    url: https://relea.informatik.uni-freiburg.de/people/josif-grabocka
+
+"Shala":
+  - firstname: ["Gresa", "G."]
+    url: https://relea.informatik.uni-freiburg.de/people/gresa-shala
