ADD impressum & update privacy policy

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: biedenka@cs.uni-freiburg.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Personal Website of André Biedenkapp
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
 keywords: Dynamic Algorithm Configuration, Reinforcement Learning, Learning to Learn  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
@@ -19,7 +19,8 @@ icon: 🤖  # the emoji used as the favicon (alternatively, provide image name i
 url: https://andrebiedenkapp.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
-impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+impressum_path: /impressum/  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+privacy_path: /privacy-policy/  # set to path to include privacy-policy link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
 # Theme
