--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -128,7 +128,7 @@
   contents:
     - year: 2023
       description:
-        - ICML, AutoML
+        - ICML, AutoML Conference, NeurIPS, JAIR, EWRL
     - year: 2022
       description:
         - JAIR, TEVC, EWRL, NeurIPS, Journal of the ACM, AutoML Conference, ALOE@ICLR, Computational Intelligence Journal
