MAINT minor fix to the msc thesis location

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -49,7 +49,7 @@
       institution: University of Freiburg, Germany
       year: 2014 - 2017
       description:
-        - "Thesis: <a href=\"https://ml.informatik.uni-freiburg.de/~biedenka/master_thesis/2017_PIAC_Biedenkapp.pdf\">Per Instance Algorithm Configuration</a>"
+        - "Thesis: <a href=\"https://ml.informatik.uni-freiburg.de/wp-content/uploads/2024/01/2017_PIAC_Biedenkapp.pdf\">Per Instance Algorithm Configuration</a>"
         - "Supervisor: Dr. Marius Lindauer"
         - "First Examiner: Prof. Dr. Frank Hutter"
         - "Second Examiner: Prof. Dr. Bernhard Nebel"
