--- a/_config.yml
+++ b/_config.yml
@@ -3,24 +3,24 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: André 
+first_name: Pravin 
 middle_name:
-last_name: Biedenkapp
-email: biedenka@cs.uni-freiburg.de
+last_name: Sharma
+email: psharma02@wm.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Personal Website of André Biedenkapp
+  Personal Website of Pravin Sharma
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
-keywords: Dynamic Algorithm Configuration, Reinforcement Learning, Learning to Learn  # add your own keywords or leave empty
+keywords: Ultrafast materials Spectroscopy, Magnetic materials, Spin dynamics  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🤖  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://andrebiedenkapp.github.io # the base hostname & protocol for your site
+url: https://pravinsharma.com.np # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
-impressum_path: /impressum/  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
-privacy_path: /privacy-policy/  # set to path to include privacy-policy link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+# impressum_path: /impressum/  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+# privacy_path: /privacy-policy/  # set to path to include privacy-policy link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
 # Theme
@@ -66,22 +66,22 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: AndreBiedenkapp # your GitHub user name
+github_username: pravins02 # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
-scholar_userid: WvtpDmcAAAAJ # your Google Scholar ID
-orcid_id: 0000-0002-8703-8559 # your ORCID ID
+# scholar_userid: WvtpDmcAAAAJ # your Google Scholar ID
+# orcid_id: 0000-0002-8703-8559 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: https://ml.informatik.uni-freiburg.de/~biedenka # work page URL
+# work_url: https://ml.informatik.uni-freiburg.de/~biedenka # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
-dblp_url: https://dblp1.uni-trier.de/pid/195/8188.html # your DBLP profile url
+# dblp_url: https://dblp1.uni-trier.de/pid/195/8188.html # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
 contact_note: >
@@ -118,8 +118,8 @@ disqus_shortname: # put your disqus shortname
 # If you have blog posts published on medium.com or other exteranl sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: automl.org
-    rss_url: https://www.automl.org/author/abiedenkapp/feed
+  # - name: automl.org
+    # rss_url: https://www.automl.org/author/abiedenkapp/feed
 
 # -----------------------------------------------------------------------------
 # Collections
