--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ icon: 🤖  # the emoji used as the favicon (alternatively, provide image name i
 
 url: https://pravinsharma.com.np # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
-last_updated: true # set to true if you want to display last updated in the footer
+last_updated: false # set to true if you want to display last updated in the footer
 # impressum_path: /impressum/  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 # privacy_path: /privacy-policy/  # set to path to include privacy-policy link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
