--- a/_config.yml
+++ b/_config.yml
@@ -70,13 +70,13 @@ github_username: pravins02 # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+linkedin_username: pravins02 # your LinkedIn user name
 # scholar_userid: WvtpDmcAAAAJ # your Google Scholar ID
 # orcid_id: 0000-0002-8703-8559 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-research_gate_profile: # your profile on ResearchGate
+research_gate_profile: Pravin-Sharma-6 # your profile on ResearchGate
 blogger_url: # your blogger URL
 # work_url: https://ml.informatik.uni-freiburg.de/~biedenka # work page URL
 keybase_username: # your keybase user name
