--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -47,7 +47,7 @@
       # institution: <a href="http://rlss.inria.fr/">Reinforcement Learning Summer SCOOL (RLSS'19)</a>
       # year: July 2019
     - title: Master of Science - Physics
-      institution: Savitribai Phule Pune University (SPPU), Pune, India
+      institution: Department of Physics, Savitribai Phule Pune University (SPPU), Pune, India
       year: 2016 - 2019
       description:
         - "Thesis: Study of SnO2 coated Au Nanocrystals with varying core size "
@@ -65,32 +65,37 @@
 - title: Experience
   type: time_table
   contents:
-    - title: AutoML Conference Online Experience Chair
-      year: 2023 & 2024
-      institution: "<a href=\"https://2024.automl.cc/\">automl.cc</a>"
+    - title: Research Assistant (RA)
+      year: 2022 - Ongoing
+      institution: "<a href=\"https://sites.google.com/email.wm.edu/opticsandlaserlab/home\">The Optics and Laser Lab</a>"
       description:
-        - "2024: Jointly with Gabi Kadlecová"
-        - "2023: Jointly with Hayeon Lee, Mohammed Abdelfattah and Richard Song"
-    - title: COSEAL General Chair
-      year: SEPT 2022 - NOW
-      institution: "<a href=\"https://www.coseal.net/organisation/\">COSEAL.net</a>"
+        - "2022 - NOW: Contuing working on my PhD project."
+        - "2022: Working on my PhD candidacy research proposal."
+    - title: MS Thesis Project
+      year: AUG 2018 - MAY 2019
+      institution: "Department of Physics, SPPU, India"
       description:
-        - "Jointly with Alexander Tornede (until 2023), Theresa Eimer (since 2024) and Lennart Schäpermeier"
-    - title: Scientific Researcher
-      institution: Machine Learning Lab, University of Freiburg
-      year: 2017 - Now
+        - "Working under the supervision of Prof. Dr. Shailaja Mahamuni for my MS Thesis."
+    - title: Research Associate ( Voluntary Position)
+      institution: The Brainycube Research Organization, Nepal
+      year: 2014 - 2021
+      description: 
+        - "Lead Team Nepal to Asia Pacific Conference for Young Scientists (APCYS-2016), Delhi, India."
+        - "Helped organizing the first Youth Science Summit (YSS-2014) in Kathmandu, Nepal."
+        - "Assisted the whole team in other events happened over time in Nepal."
 
-    - title: Student Assistant
-      institution: Machine Learning Lab, University of Freiburg
-      year: 2015 - 2017
+    - title: Financial Head for Annual Fest of the Department, Spandan
+      institution: Department of Physics, SPPU, India
+      year: 2017 - 2018
       description:
-        - Assisting in the implementation of research projects
+        - Assisting in the implementation of budget allocated for the event.
+        - Analysed the spending for the event and provided the report to the committee.
 
-    - title: Student Assistant
-      institution: Chair of Computer Architecture, University of Freiburg
-      year: 2014
-      description:
-        - Maintenance of the mobile robots for the hardware lab-course
+    # - title: Student Assistant
+    #   institution: Chair of Computer Architecture, University of Freiburg
+    #   year: 2014
+    #   description:
+    #     - Maintenance of the mobile robots for the hardware lab-course
 
 
 - title: Teaching Experience
