--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -101,10 +101,19 @@
 - title: Teaching Experience
   type: time_table
   contents:
-    - title: Foundations of Deep Learning (Flipped Classroom)
-      year: 2023
-    - title: Lab Course Automated Machine Learning
-      year: 2022
+    - title: Teachin Assistant (TA)
+      institution: Department of Physics, William & Mary
+      year: Fall 2021 - Spring 2022
+      description:
+        - Graded the Course PHYS - 101H (Fall -2021)
+        - Problem Session taught for the Course PHYS - 102H (Spring - 2022)
+    - title: Teaching Assistant (TA)
+      institution: Department of Physics, William & Mary
+      year: Fall 2022 - Spring 2023
+      description:
+        - Taught Lab courses for PHYS 101L and PHYS 102L.
+        - Graded the Lab assignments and provided feedback to the students.
+        - Participated weekly in TA's meeting to enhance the course effectiveness.
     - title: Seminar on Dynamic Algorithm Configuration and Optimization
       year: 2022
     - title: Automated Machine Learning (Massive Open Online Course)
