--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,8 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: pravins02 # your GitHub user name
 gitlab_username: # your GitLab user name
-# twitter_username: pravins002 # your Twitter handle
-x_username: pravins002
+twitter_username: pravins002 # your Twitter handle
+# x_username: pravins002
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: pravins02 # your LinkedIn user name
 # scholar_userid: WvtpDmcAAAAJ # your Google Scholar ID
