--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,6 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: pravins02 # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: pravins002 # your Twitter handle
-# x_username: pravins002
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: pravins02 # your LinkedIn user name
 # scholar_userid: WvtpDmcAAAAJ # your Google Scholar ID
@@ -79,7 +78,7 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: Pravin-Sharma-6 # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: https://sites.google.com/email.wm.edu/opticsandlaserlab/people/current-members?authuser=0 # work page URL
+# work_url: https://sites.google.com/email.wm.edu/opticsandlaserlab/people/current-members?authuser=0 # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 # dblp_url: https://dblp1.uni-trier.de/pid/195/8188.html # your DBLP profile url
