--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -6,32 +6,32 @@
     - name: Date of Birth
       value: 10th April 1992
     - name: Languages
-      value: Nepali (native), Hindi (native), English (fluent), Marvadi
+      value: Nepali (native), Hindi (native), English (fluent), Marvadi, Marathi
 
-- title: Reserach Interests and Selected Published Works
-  type: nested_list
-  contents:
-    - title: Dynamic Algorithm Configuration
-      items:
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/20-ecai-dac.pdf\">Dynamic Algorithm Configuration: Foundation of a New Meta-Algorithmic Framework</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/21-ICAPS-DAC-PLAN.pdf\">Learning Heuristic Selection with Dynamic Algorithm Configuration</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/20-PPSN-LTO-CMA.pdf\">Learning Step-Size Adaptation in CMA-ES</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/21-IJCAI-DACBench.pdf\">DACBench: A Benchmark Library for Dynamic Algorithm Configuration</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/22-gecco.pdf\">Theory-inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration</a>"
-    - title: Learning to Learn
-      items:
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/biedenkapp21a.pdf\">TempoRL: Learning When to Act</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/eimer21a.pdf\">Self-Paced Context Evaluations for Contextual Reinforcement Learning</a>"
-        - "<a href=\"https://arxiv.org/pdf/2402.06402.pdf\">Hierarchical Transformers are Efficient Meta-Reinforcement Learners</a>"
-    - title: Deep Reinforcement Learning
-      items:
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/zhang21n.pdf\">On the Importance of Hyperparameter Optimization for Model-based Reinforcement Learning</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/23-TMLR-CARL.pdf\">Contextualize Me – The Case for Context in Reinforcement Learning</a>"
-    - title: Automated Machine Learning and Reinforcement Learning
-      items:
-        - "<a href=\"https://openreview.net/pdf?id=hSjxQ3B7GWq\">Sample-Efficient Automated Deep Reinforcement Learning</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/22-JAIR-AutoRL.pdf\">Automated Reinforcement Learning (AutoRL): A Survey and Open Problems</a>"
-        - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/23-ICLR-RCGP.pdf\">Gray-Box Gaussian Processes for Automated Reinforcement Learning</a>"
+# - title: Reserach Interests and Selected Published Works
+#   type: nested_list
+#   contents:
+#     - title: Dynamic Algorithm Configuration
+#       items:
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/20-ecai-dac.pdf\">Dynamic Algorithm Configuration: Foundation of a New Meta-Algorithmic Framework</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/21-ICAPS-DAC-PLAN.pdf\">Learning Heuristic Selection with Dynamic Algorithm Configuration</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/20-PPSN-LTO-CMA.pdf\">Learning Step-Size Adaptation in CMA-ES</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/21-IJCAI-DACBench.pdf\">DACBench: A Benchmark Library for Dynamic Algorithm Configuration</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/22-gecco.pdf\">Theory-inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration</a>"
+#     - title: Learning to Learn
+#       items:
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/biedenkapp21a.pdf\">TempoRL: Learning When to Act</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/eimer21a.pdf\">Self-Paced Context Evaluations for Contextual Reinforcement Learning</a>"
+#         - "<a href=\"https://arxiv.org/pdf/2402.06402.pdf\">Hierarchical Transformers are Efficient Meta-Reinforcement Learners</a>"
+#     - title: Deep Reinforcement Learning
+#       items:
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/zhang21n.pdf\">On the Importance of Hyperparameter Optimization for Model-based Reinforcement Learning</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/23-TMLR-CARL.pdf\">Contextualize Me – The Case for Context in Reinforcement Learning</a>"
+#     - title: Automated Machine Learning and Reinforcement Learning
+#       items:
+#         - "<a href=\"https://openreview.net/pdf?id=hSjxQ3B7GWq\">Sample-Efficient Automated Deep Reinforcement Learning</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/22-JAIR-AutoRL.pdf\">Automated Reinforcement Learning (AutoRL): A Survey and Open Problems</a>"
+#         - "<a href=\"https://andrebiedenkapp.github.io/assets/pdf/paper/23-ICLR-RCGP.pdf\">Gray-Box Gaussian Processes for Automated Reinforcement Learning</a>"
 
 - title: Education
   type: time_table
