--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ email: psharma02@wm.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Personal Website of Pravin Sharma
 footer_text: >
+<a href="https://hits.sh/pravinsharma.com.np/"><img alt="Hits" src="https://hits.sh/pravinsharma.com.np.svg?label=visitors"/></a>
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
 keywords: Ultrafast materials Spectroscopy, Magnetic materials, Spin dynamics  # add your own keywords or leave empty
 
