--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,8 @@ wikidata_id: # your wikidata id
 stackoverflow_id: #your stackoverflow id
 
 contact_note: >
-  Feel free to drop me a line via email.
+  Feel free to drop me a line via email.  
+<a href="https://hits.sh/pravinsharma.com.np/"><img alt="Hits" src="https://hits.sh/pravinsharma.com.np.svg?label=visitors"/></a>
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -102,8 +103,8 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: My Personal Blogs # your blog must have a name for it to show up in the nav bar
-blog_description: Collection of blog posts about my research and hobbies!!!
+blog_name: My Blogs # your blog must have a name for it to show up in the nav bar
+blog_description: Blogs about my research and hobbies!!!
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 permalink: /blog/:year/:title/
 
