--- a/_config.yml
+++ b/_config.yml
@@ -222,7 +222,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags:  # this tags will be dispalyed on the front page of your blog
+display_tags: ['hiking-trips','research','travel','torage-devices'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
